# course-project-ap5003

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  app.py  db.sqlite3  docker-compose.yml  dockerFile  kube-def.yaml  manage.py  pyproject.toml  tests.py
.github/workflows/: docker-image.yml  gcp.yml  gcp.yml.bak
app/: settings.py  urls.py
app/static/styles/: variables.css
authentication/: urls.py  views.py
authentication/static/scripts/: main.js
authentication/static/styles/: auth.css  login.css  variables.css
authentication/templates/auth/: login.html  signup.html
backend/: routes.py
chat/: package.json  urls.py  views.py
chat/src/services/: firebase.js
chat/static/scripts/: common.js
chat/static/styles/: common.css
chat/templates/: app.html  chat.html  chat_ui.html  sidebar.html
client/: fix.sh  package.json  pnpm-lock.yaml
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  index.tsx
frontend/src/components/: Loading.tsx  LoginButton.tsx
frontend/src/components/AuthenticatedApp/: index.jsx
frontend/src/components/Landing/: index.tsx
frontend/src/components/MessageInput/: index.tsx
frontend/src/components/MessageList/: index.tsx  styles.css
frontend/src/components/UnauthenticatedApp/: index.jsx  index.tsx
frontend/src/context/: auth.js  auth.tsx
frontend/src/data/: chatRooms.ts
frontend/src/hooks/: useAuth.ts  useMessages.ts
frontend/src/services/: firebase.js  firebase.ts
