[tool.poetry]
name = "django-messaging"
version = "0.1.0"
description = ""
authors = ["Suraj Mandal <surajmandalcell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
