[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Suraj Mandal <surajmandalcell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
pytest = "^7.2.2"
pylint = "^2.17.2"
pytest-cov = "^4.0.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pycodestyle = "^2.10.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
